request sql and data analysis in create_db.ipynb

--- a/ipynb/create_db.ipynb
+++ b/ipynb/create_db.ipynb
@@ -55726,20 +55726,372 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://books.toscrape.com/media/cache/fe/72/fe72f0532301ec28892ae79a629a293c.jpg'"
+       "['url',\n",
+       " 'book_nb',\n",
+       " 'title',\n",
+       " 'url_image',\n",
+       " 'category',\n",
+       " 'rating',\n",
+       " 'description',\n",
+       " 'description_more',\n",
+       " 'UPC',\n",
+       " 'type',\n",
+       " 'price_exclude_tax',\n",
+       " 'price_include_tax',\n",
+       " 'tax',\n",
+       " 'availability',\n",
+       " 'nb_reviews',\n",
+       " 'currency',\n",
+       " 'keywords']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "books_df.columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books_df['id'] = range(1, len(books_df) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books_df['keywords'] = books_df['keywords'].apply(lambda x: ', '.join(x) if isinstance(x, list) else '' if x is None else str(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table 'books' created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "column_types = {\n",
+    "    'id': 'INT PRIMARY KEY',\n",
+    "    # 'book_nb': 'SMALLINT',\n",
+    "    'category': 'VARCHAR(50)',\n",
+    "    'rating': 'TINYINT',\n",
+    "    'description': 'TEXT',\n",
+    "    'description_more': 'BOOL',\n",
+    "    'UPC': 'VARCHAR(50)',\n",
+    "    'type': 'VARCHAR(50)',\n",
+    "    \n",
+    "    # 'availability': 'SMALLINT',\n",
+    "    # 'nb_reviews': 'SMALLINT',\n",
+    "    'currency': 'VARCHAR(50)',\n",
+    "}\n",
+    "table_name = \"books\"\n",
+    "create_table_from_dataframe(con, table_name, books_df, column_types, smallint=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data inserted successfully into 'books' table.\n"
+     ]
+    }
+   ],
+   "source": [
+    "insert_dataframe_to_table(con, table_name, books_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### les 10 produits les plus chers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('The Perfect Play (Play by Play #1)', 59.99)\n",
+      "('Last One Home (New Beginnings #1)', 59.98)\n",
+      "('Civilization and Its Discontents', 59.95)\n",
+      "('The Barefoot Contessa Cookbook', 59.92)\n",
+      "('The Diary of a Young Girl', 59.9)\n",
+      "('The Bone Hunters (Lexy Vaughan & Steven Macaulay #2)', 59.71)\n",
+      "('Thomas Jefferson and the Tripoli Pirates: The Forgotten War That Changed American History', 59.64)\n",
+      "('Boar Island (Anna Pigeon #19)', 59.48)\n",
+      "('The Improbability of Love', 59.45)\n",
+      "('The Man Who Mistook His Wife for a Hat and Other Clinical Tales', 59.45)\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = \"\"\"\n",
+    "SELECT title, price_include_tax from books\n",
+    "order by price_include_tax desc\n",
+    "limit 10\n",
+    "\"\"\"\n",
+    "res = execute_query(con, cur, q)\n",
+    "put_res(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### les 10 produits les moins chers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('An Abundance of Katherines', 10.0)\n",
+      "('The Origin of Species', 10.01)\n",
+      "('The Tipping Point: How Little Things Can Make a Big Difference', 10.02)\n",
+      "('Patience', 10.16)\n",
+      "('Greek Mythic History', 10.23)\n",
+      "('The Fellowship of the Ring (The Lord of the Rings #1)', 10.27)\n",
+      "('History of Beauty', 10.29)\n",
+      "('The Lucifer Effect: Understanding How Good People Turn Evil', 10.4)\n",
+      "('NaNo What Now? Finding your editing process, revising your NaNoWriMo book and building a writing career through publishing and beyond', 10.41)\n",
+      "('Pet Sematary', 10.56)\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = \"\"\"\n",
+    "SELECT title, price_include_tax from books\n",
+    "order by price_include_tax\n",
+    "limit 10\n",
+    "\"\"\"\n",
+    "res = execute_query(con, cur, q)\n",
+    "put_res(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### les 5 catégories ayant le plus de produits en stocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Default', 1345)\n",
+      "('Nonfiction', 975)\n",
+      "('Sequential Art', 686)\n",
+      "('Fiction', 588)\n",
+      "('Add a comment', 516)\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = \"\"\"\n",
+    "SELECT category, CAST(SUM(availability) AS SIGNED)  as sum_availability from books\n",
+    "group by category\n",
+    "order by sum_availability desc\n",
+    "limit 5\n",
+    "\"\"\"\n",
+    "res = execute_query(con, cur, q)\n",
+    "put_res(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### les trois catégories ayant les produits les plus chers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Romance', 59.99)\n",
+      "('Fiction', 59.98)\n",
+      "('Psychology', 59.95)\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = \"\"\"\n",
+    "SELECT category, max(price_include_tax) as price from books\n",
+    "group by category\n",
+    "order by price desc\n",
+    "limit 3\n",
+    "\"\"\"\n",
+    "res = execute_query(con, cur, q)\n",
+    "put_res(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### les différentes catégories et le nombre de livres dans chacune"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Default', 152)\n",
+      "('Nonfiction', 110)\n",
+      "('Sequential Art', 75)\n",
+      "('Add a comment', 67)\n",
+      "('Fiction', 65)\n",
+      "('Young Adult', 54)\n",
+      "('Fantasy', 48)\n",
+      "('Romance', 35)\n",
+      "('Mystery', 32)\n",
+      "('Food and Drink', 30)\n",
+      "('Childrens', 29)\n",
+      "('Historical Fiction', 26)\n",
+      "('Poetry', 19)\n",
+      "('Classics', 19)\n",
+      "('History', 18)\n",
+      "('Womens Fiction', 17)\n",
+      "('Horror', 17)\n",
+      "('Science Fiction', 16)\n",
+      "('Science', 14)\n",
+      "('Music', 13)\n",
+      "('Business', 12)\n",
+      "('Philosophy', 11)\n",
+      "('Thriller', 11)\n",
+      "('Travel', 11)\n",
+      "('Humor', 10)\n",
+      "('Autobiography', 9)\n",
+      "('Art', 8)\n",
+      "('Psychology', 7)\n",
+      "('Religion', 7)\n",
+      "('Spirituality', 6)\n",
+      "('New Adult', 6)\n",
+      "('Christian Fiction', 6)\n",
+      "('Biography', 5)\n",
+      "('Self Help', 5)\n",
+      "('Sports and Games', 5)\n",
+      "('Health', 4)\n",
+      "('Christian', 3)\n",
+      "('Politics', 3)\n",
+      "('Contemporary', 3)\n",
+      "('Historical', 2)\n",
+      "('Crime', 1)\n",
+      "('Erotica', 1)\n",
+      "('Cultural', 1)\n",
+      "('Novels', 1)\n",
+      "('Short Stories', 1)\n",
+      "('Suspense', 1)\n",
+      "('Academic', 1)\n",
+      "('Adult Fiction', 1)\n",
+      "('Parenting', 1)\n",
+      "('Paranormal', 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = \"\"\"\n",
+    "SELECT category, count(*) as count from books\n",
+    "group by category\n",
+    "order by count desc\n",
+    "\"\"\"\n",
+    "res = execute_query(con, cur, q)\n",
+    "put_res(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### le nombre de livre par note (étoiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 226)\n",
+      "(2, 196)\n",
+      "(3, 203)\n",
+      "(4, 179)\n",
+      "(5, 196)\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = \"\"\"\n",
+    "SELECT rating, count(*) as count from books\n",
+    "group by rating\n",
+    "order by rating\n",
+    "\"\"\"\n",
+    "res = execute_query(con, cur, q)\n",
+    "put_res(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
